[package]
name = "elopage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
clap = { version = "4.2.5", features = ["env", "wrap_help", "derive"] }
color-eyre = "0.6.2"
futures = { version = "0.3.28", default-features = false, features = ["std", "async-await"] }
reqwest = { version = "0.11.17", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "stream"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros", "fs"] }
