[package]
name = "elopage-dl"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
clap = { version = "4.5.4", features = ["env", "wrap_help", "derive"] }
clap-verbosity-flag = "2.2.0"
color-eyre = "0.6.3"
futures = { version = "0.3.30", default-features = false, features = ["std", "async-await"] }
htmlize = { version = "1.0.5", features = ["unescape"] }
log = "0.4.21"
once_cell = "1.19.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "stream"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "fs", "process"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
